# Open-Pandemic-Risk

./: .env.example  .gitignore  Architecture.md  ENG_REVIEW_FOCUSED_BUILD.md  FOCUSED_BUILD_CHECKLIST.md  HACKATHON_MVP.md  Makefile  README.md  app.db-shm  app.db-wal  docker-compose.yml  index.html
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: azure_client.py  db.py  logging_utils.py  main.py  settings.py
backend/app/agents/: __init__.py  policies.py  react_agent.py  recommendation_agent.py  tools.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  debug_stages.py  pipeline.py
backend/app/clients/: __init__.py  exa_client.py
backend/app/ingest/: errors.py  promed.py  who.py  who_profiles.py
backend/app/models/: __init__.py  entities.py
backend/app/pipeline/: contracts.py  orchestrator.py  registry.py  run_ingest.py
backend/app/pipeline/runner/: __init__.py  pipeline_runner.py
backend/app/pipeline/stages/: __init__.py  contracts.py  enrich_snapshot_agent.py  (+5 more)
backend/app/schemas/: __init__.py  agent.py  debug_stage.py  ingest.py  pipeline.py
backend/tests/: test_agent_tools.py  test_debug_stages.py  test_exa_enrichment_stage.py  test_health.py  test_ingest.py  test_live_agent_exa.py  test_live_env_exa.py  test_live_exa_enrichment.py  test_live_integration.py  test_ml_labeling.py  test_orchestrator_unit.py  test_pipeline_flow.py  test_pipeline_results.py  test_pipeline_unit.py  test_promed_contract.py  test_score_stage.py  test_snapshot_enrich.py  test_startup_preflight.py  test_who_contract.py
(+36 files in other folders)
