[project]
name = "biohack-backend"
version = "0.1.0"
description = "FastAPI backend for biohack scaffold"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "sqlalchemy==2.0.36",
  "pydantic-settings==2.7.0",
  "openai==1.57.4",
  "httpx==0.28.1",
]

[dependency-groups]
dev = [
  "pytest==8.3.4",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers"
markers = [
  "unit: Pure logic tests with no network or DB I/O",
  "contract: Adapter-level tests with mocked external HTTP contracts",
  "integration_local: Route + DB tests with mocked external APIs",
  "integration_live: Real external API integration tests",
]
